--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-plus": "^1.0.1-alpha.11",
+    "js-cookie": "^2.2.1",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-rc.1"
   },
